<resources>
    <string name="app_name">3amp</string>
    <string name="amplifier">Amplifier:</string>
    <string name="gain">gain</string>
    <string name="master">master</string>
    <string name="bass">bass</string>
    <string name="middle">middle</string>
    <string name="treble">treble</string>
    <string name="light">Light</string>
    <string name="compressor">Compressor</string>
    <string name="rack">RACK</string>
    <string name="stomp">STOMP</string>
    <string name="sustain">sustain</string>
    <string name="output">output</string>
    <string name="effect">Effect</string>
    <string name="chorus">CHORUS</string>
    <string name="flanger">FLANGER</string>
    <string name="phaser">PHASER</string>
    <string name="tremolo">TREMOLO</string>
    <string name="delay">Delay</string>
    <string name="reverb">Reverb</string>
    <string name="release">release</string>
    <string name="gate">Gate</string>
    <string name="amp">AMP</string>
    <dimen name="knob_margin">7dp</dimen>
    <string-array name="thr10_amps">
        <item>Clean</item>
        <item>Crunch</item>
        <item>Lead</item>
        <item>BritHi</item>
        <item>Modern</item>
        <item>Bass</item>
        <item>Aco</item>
        <item>Flat</item>
    </string-array>
    <string-array name="thr5_amps">
        <item>Clean</item>
        <item>Crunch</item>
        <item>Lead</item>
        <item>BritHi</item>
        <item>Modern</item>
    </string-array>
    <string-array name="thr10c_amps">
        <item>Delux</item>
        <item>Class A</item>
        <item>US Blues</item>
        <item>Brit blues</item>
        <item>mini</item>
        <item>Bass</item>
        <item>Aco</item>
        <item>Flat</item>
    </string-array>
    <string-array name="thr10x_amps">
        <item>Power I</item>
        <item>Power II</item>
        <item>Brown I</item>
        <item>Brown II</item>
        <item>Southern HI</item>
        <item>Clean</item>
        <item>Bass</item>
        <item>Flat</item>
    </string-array>
    <string-array name="thr5a_amps">
        <item>EG CLN</item>
        <item>Nylon</item>
        <item>TUBE</item>
        <item>DYNAMIC</item>
        <item>CONDENSER</item>
    </string-array>
    <string-array name="thr10_cabs">
        <item>US4x12</item>
        <item>US2x12</item>
        <item>Brit4x12</item>
        <item>Brit2x12</item>
        <item>1x12</item>
        <item>4x10</item>
        <item>None</item>
    </string-array>
    <string-array name="reverbs">
        <item>Disable</item>
        <item>Hall</item>
        <item>Room</item>
        <item>Palate</item>
        <item>Spring</item>
    </string-array>
    <string-array name="compressor_modes">
        <item>Disable</item>
        <item>Stomp</item>
        <item>Rack</item>
    </string-array>
    <string-array name="effects">
        <item>Disable</item>
        <item>Chorus</item>
        <item>Flanger</item>
        <item>Tremolo</item>
        <item>Phaser</item>
    </string-array>
    <string-array name="tabs">
        <item>Amp</item>
        <item>Compressor</item>
        <item>Effects</item>
        <item>Delay</item>
        <item>Reverb</item>
        <item>Gate</item>
    </string-array>
    <string-array name="sw_modes">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>
    <string-array name="knee">
        <item>1:1</item>
        <item>1:4</item>
        <item>1:8</item>
        <item>1:12</item>
        <item>1:20</item>
        <item>∞</item>
    </string-array>
    <string-array name="ratio">
        <item>Soft</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="speed">speed</string>
    <string name="depth">depth</string>
    <string name="mix">mix</string>
    <string name="time">time</string>
    <string name="feedback">feedback</string>
    <string name="high_cut">high cut</string>
    <string name="low_cut">low cut</string>
    <string name="level">level</string>
    <string name="pre_dalay">pre dalay</string>
    <string name="high_ratio">high ratio</string>
    <string name="low_ratio">low ratio</string>
    <string name="attack">attack</string>
    <string name="threshold">threshold</string>
    <string name="manual">manual</string>
    <string name="spread">spread</string>
    <string name="freq">freq</string>
    <string name="filter">filter</string>
    <string name="presets">presets</string>
    <string name="save_preset">save preset</string>
    <string name="save_preset_as">save preset as..</string>
    <string name="delete">delete</string>
    <string name="import_ydl">Import YDL</string>
    <string name="rename">rename</string>
    <string name="load">load</string>
    <string name="create_group">create group</string>
    <string name="common_delete_dialog">Delete</string>
    <string name="presets_toolbar_title">Presets</string>
    <string name="enter_a_preset_name">Enter a name</string>
    <string name="is_not_ydl_file">This is not ydl file</string>
    <string name="about">about</string>
    <string name="title_activity_about">AboutActivity</string>
    <string-array name="donation_google_catalog_values">
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>3 Euros</item>
        <item>5 Euros</item>
        <item>8 Euros</item>
        <item>13 Euros</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
