<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/block_margin_bottom"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <in.goodiebag.carouselpicker.CarouselPicker
            android:id="@+id/reverb_mode_carousel"
            style="@style/AppTheme.carouselPicker" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reverb_empty_block"
        style="@style/empty_block" />

    <TableLayout
        android:id="@+id/common_reverb_block"
        style="@style/knobTable"
        android:visibility="gone">

        <TableRow>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_time_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/time" />

                    <TextView
                        android:id="@+id/reverb_time_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_pre_delay_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/pre_dalay" />

                    <TextView
                        android:id="@+id/reverb_pre_dalay_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_low_cut"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/low_cut" />

                    <TextView
                        android:id="@+id/reverb_low_cut_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>


        <TableRow>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_hi_cut_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/high_cut" />

                    <TextView
                        android:id="@+id/reverb_high_cut_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_hi_ratio_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/high_ratio" />

                    <TextView
                        android:id="@+id/reverb_high_ratio_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_low_ratio_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/low_ratio" />

                    <TextView
                        android:id="@+id/reverb_low_ratio_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout style="@style/knobBlock">


                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_level_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/reverb_level_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/spring_reverb_block"
        style="@style/knobTable"
        android:visibility="gone">

        <TableRow>

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_spring_reverb"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/reverb" />

                    <TextView
                        android:id="@+id/reverb_spring_reverb_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>

            <Space style="@style/knobBlock" />

            <LinearLayout style="@style/knobBlock">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/reverb_spring_filter_knob"
                    style="@style/AppTheme.knobs" />

                <LinearLayout style="@style/AppTheme.labelBlock">

                    <TextView
                        style="@style/AppTheme.textKnob"
                        android:text="@string/filter" />

                    <TextView
                        android:id="@+id/reverb_spring_filter_text"
                        style="@style/AppTheme.valueTextKnob" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>

    </TableLayout>


</LinearLayout>