<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <in.goodiebag.carouselpicker.CarouselPicker
                android:id="@+id/delay_sw_carousel"
                style="@style/AppTheme.carouselPicker" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delay_empty_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TableLayout
            android:id="@+id/delay_block"
            android:visibility="gone"
            style="@style/knobTable">

            <TableRow>
                <LinearLayout style="@style/knobBlock">

                    <it.beppi.knoblibrary.Knob
                        android:id="@+id/delay_time_knob"
                        style="@style/AppTheme.knobs" />

                    <LinearLayout style="@style/AppTheme.labelBlock">

                        <TextView
                            style="@style/AppTheme.textKnob"
                            android:text="@string/time" />

                        <TextView
                            android:id="@+id/delay_time_text"
                            style="@style/AppTheme.valueTextKnob" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout style="@style/knobBlock">

                    <it.beppi.knoblibrary.Knob
                        android:id="@+id/delay_feedback_knob"
                        style="@style/AppTheme.knobs" />

                    <LinearLayout style="@style/AppTheme.labelBlock">

                        <TextView
                            style="@style/AppTheme.textKnob"
                            android:text="@string/feedback" />

                        <TextView
                            android:id="@+id/delay_feedback_text"
                            style="@style/AppTheme.valueTextKnob" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/knobBlock">

                    <it.beppi.knoblibrary.Knob
                        android:id="@+id/delay_high_cut_knob"
                        style="@style/AppTheme.knobs" />

                    <LinearLayout style="@style/AppTheme.labelBlock">

                        <TextView
                            style="@style/AppTheme.textKnob"
                            android:text="@string/high_cut" />

                        <TextView
                            android:id="@+id/delay_high_cut_text"
                            style="@style/AppTheme.valueTextKnob" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

      <TableRow>
          <LinearLayout style="@style/knobBlock">

              <it.beppi.knoblibrary.Knob
                  android:id="@+id/delay_low_cut_knob"
                  style="@style/AppTheme.knobs" />

              <LinearLayout style="@style/AppTheme.labelBlock">

                  <TextView
                      style="@style/AppTheme.textKnob"
                      android:text="@string/low_cut" />

                  <TextView
                      android:id="@+id/delay_low_cut_text"
                      style="@style/AppTheme.valueTextKnob" />
              </LinearLayout>
          </LinearLayout>

          <LinearLayout style="@style/knobBlock">

              <it.beppi.knoblibrary.Knob
                  android:id="@+id/delay_level_knob"
                  style="@style/AppTheme.knobs" />

              <LinearLayout style="@style/AppTheme.labelBlock">

                  <TextView
                      style="@style/AppTheme.textKnob"
                      android:text="@string/level" />

                  <TextView
                      android:id="@+id/delay_level_text"
                      style="@style/AppTheme.valueTextKnob" />
              </LinearLayout>
          </LinearLayout>
      </TableRow>

        </TableLayout>



</RelativeLayout>