<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_main">
    <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/block_margin_bottom"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap">
        <in.goodiebag.carouselpicker.CarouselPicker
            android:id="@+id/amp_carousel"

           style="@style/AppTheme.carouselPicker" />
        <in.goodiebag.carouselpicker.CarouselPicker
            android:id="@+id/cab_carousel"

            style="@style/AppTheme.carouselPicker" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/knob_margin"
                android:orientation="vertical">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/gain_knob"
                    style="@style/AppTheme.knobs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/gain" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/knob_margin"
                android:orientation="vertical">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/master_knob"
                    style="@style/AppTheme.knobs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:lines="1"
                    android:text="@string/master" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/knob_margin"
                android:orientation="vertical">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/bass_knob"
                    style="@style/AppTheme.knobs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/bass" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/knob_margin"
                android:orientation="vertical">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/middle_knob"
                    style="@style/AppTheme.knobs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"

                    android:text="@string/middle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/knob_margin"
                android:orientation="vertical">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/treble_knob"
                    style="@style/AppTheme.knobs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/treble" />

            </LinearLayout>
        </LinearLayout>


    </com.google.android.flexbox.FlexboxLayout>
</FrameLayout>